# fun-with-gRPC

./: CMakeLists.txt  README.md
cmake/: 3rdparty.cmake
include/funwithgrpc/: BaseRequest.hpp  Config.h  logging.h
src/async-client/: CMakeLists.txt  Config.h  async-client.cpp  bidirectional-stream-client.hpp  unary-and-stream-client.hpp  unary-client.hpp
src/async-server/: CMakeLists.txt  async-server.cpp  bidirectional-stream.hpp  simple-req-res.hpp  test-config.h  unary-and-streams.hpp
src/callback-client/: CMakeLists.txt  callback-client-impl.hpp  callback-client.cpp
src/callback-server/: CMakeLists.txt  callback-impl.hpp  callback-server.cpp
src/grpc/: CMakeLists.txt  grpctest.cpp
src/qt_client/: CMakeLists.txt  Main.qml  ServerComm.cpp  ServerComm.h  main.cpp
